--- a/project-02/src/components/navbar/Navbar.css
+++ b/project-02/src/components/navbar/Navbar.css
@@ -29,6 +29,7 @@ a > p:hover {
   justify-content: space-around;
   align-items: center;
   width: 30%;
+  margin-top: 0.5rem;
 }
 .mobile-nav{
     display: none;
