--- a/project-02/src/pages/products/Products.css
+++ b/project-02/src/pages/products/Products.css
@@ -39,3 +39,38 @@ span {
   height: 470px;
   overflow: auto;
 }
+/* Target the scrollbar */
+.product-card-main::-webkit-scrollbar {
+  width: 10px; 
+}
+.product-card-main::-webkit-scrollbar-track{
+  background: #ffffff; /* Color of the track */
+}
+
+@media (max-width:800px) {
+  .product-card-main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 7px;
+    height: 470px;
+    overflow: auto;
+  }
+  .products-main {
+    width: 95%;
+    margin: auto;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 7px;
+  }
+  .product-filter {
+    border: 1px solid;
+    height: auto;
+    width: 100%;
+  }
+  .product-card {
+    width: 100%;
+  }
+}
